--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,13 @@ services:
       - mysql
     volumes:
       - ./:/var/www/html
+    environment:
+      DB_CONNECTION: mysql
+      DB_HOST: mysql
+      DB_PORT: 3306
+      DB_DATABASE: shortner_url
+      DB_USERNAME: root
+      DB_PASSWORD: 12345678
 
   mysql:
     image: mysql:latest
@@ -21,6 +28,7 @@ services:
       - shortner_url
     volumes:
       - ./mysql-data:/var/lib/mysql
+
 
   shortner_url_phpmyadmin:
     image: phpmyadmin/phpmyadmin
